--- a/HTML/pacman.html
+++ b/HTML/pacman.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pacman</title>
-    <link rel="stylesheet" href="pacman.css">
-    <script src="pacman.js"></script>
+    <link rel="stylesheet" href="/CSS/pacman.css">
+    <script src="/JS/pacman.js" defer></script> 
 </head>
 <body>
-    
+    <div class="fond"></div>
+    <div id="grille">
+    </div>
 </body>
 </html>
