--- a/HTML/pacman.html
+++ b/HTML/pacman.html
@@ -7,10 +7,13 @@
     <title>Pacman</title>
     <link rel="stylesheet" href="/CSS/pacman.css">
     <script src="/JS/pacman.js" defer></script> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="fond"></div>
-    <div id="grille">
-    </div>
+    <div id="grille"></div>
+    <div class="score"></div>
 </body>
 </html>
