Le Pac-man version 2

--- a/HTML/pacman.html
+++ b/HTML/pacman.html
@@ -15,5 +15,10 @@
     <div class="fond"></div>
     <div id="grille"></div>
     <div class="score"></div>
+    <div class="btn">
+        <input type="button" id="restart" placeholder="Rejouer" value="Rejouer">
+                                    <br>
+        <input type="text" id="restphantom" value= "" placeholder="Ecris le Nombre de fantome que tu veut">
+    </div>
 </body>
 </html>
