--- a/HTML/pacman.html
+++ b/HTML/pacman.html
@@ -7,6 +7,9 @@
     <title>Pacman</title>
     <link rel="stylesheet" href="/CSS/pacman.css">
     <script src="/JS/pacman.js" defer></script> 
+    <script src="/JS/c.pacman.js"></script>
+    <script src="/JS/c.grille.js"></script>
+    <script src="/JS/c.phantom.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
